# LieBatch

./: .gitignore  .gitmodules  README.md  addprojectpaths.m
C++/: CMakeLists.txt
C++/g2o_SE2/: CMakeLists.txt  b_edge_se2se2.h  u_edge_se2_prior.cpp
C++/g2o_SE2_example/: CMakeLists.txt  main.cpp
C++/g2o_SE2_lib/: CMakeLists.txt  b_edge_se2se2.cpp  b_edge_se2se2.h  types_slam_se2.cpp  types_slam_se2.h  u_edge_se2_gps.cpp  u_edge_se2_gps.h  u_edge_se2_prior.cpp  u_edge_se2_prior.h  vertex_se2.cpp  vertex_se2.h
MATLAB/: README.md  addprojectpaths.m
MATLAB/Analysis/: se2_analysis.m
MATLAB/SE2/: config.yml  main.m  main_mct.m
MATLAB/SE2/+Initialization/: initLinekf.m  initOdom.m
MATLAB/SE2/+batchOptimization/: batchOptimizationSE2.m
MATLAB/Utils/: blkdiag3d.m  getBlockDiagonals.m
SE2/: addprojectpaths.m  config.yml  main.m
SE2/+Initialization/: initOdom.m
SE2/+SE2/: Log.m  odot.m
SE2/+batchOptimization/: batchOptimizationSE2.m
SE2/Initialization/: initLinekf.m  initOdom.m
doc/: doc.tex  references.bib
doc/figs/: se2_example_error_plots.eps  se2_example_trajectories.eps
doc/figs/Graphics/: car_body.eps
